--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,12 @@
   },
   "dependencies": {
     "gatsby": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-source-filesystem": "^3.11.0",
     "gatsby-theme-shared-nav": "*",
+    "gatsby-transformer-sharp": "^3.11.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
