--- a/site/package.json
+++ b/site/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example",
-  "version": "1.0.0",
   "private": true,
+  "name": "site",
+  "version": "1.0.0",
   "description": "Frontend Masters Intro to Gatsby",
   "author": "Jason Lengstorf",
   "keywords": [
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "gatsby": "^3.11.0",
-    "gatsby-theme-shared-nav": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
