minimum theme file structure

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "workspaces": [
-    "site"
+    "site",
+    "gatsby-theme-shared-nav"
   ],
   "scripts": {
     "develop": "yarn workspace site develop",
