--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   build = "yarn workspace site build"
   publish = "public"
-  environment = { NETLIFY_USE_YARN = true }
+  environment = { NETLIFY_USE_YARN = "true" }
