--- a/gatsby-theme-shared-nav/package.json
+++ b/gatsby-theme-shared-nav/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "peerDependencies": {
     "gatsby": "^3.11.1"
+  },
+  "dependencies": {
+    "gatsby-plugin-layout": "^2.11.0"
   }
 }
