--- a/gatsby-theme-shared-nav/package.json
+++ b/gatsby-theme-shared-nav/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "peerDependencies": {
     "gatsby": "^3.12.0"
+  },
+  "dependencies": {
+    "gatsby-plugin-layout": "^2.12.0"
   }
 }
