--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^3.11.0",
     "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-theme-shared-nav": "*",
